{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 131,
  "lineage": "3a427760-86f2-ef94-e722-d868a909a6b9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "target_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:vpc/vpc-0ba2582a614948335",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00291afd0b8a5fed2",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0d6f2da6d633bf803",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Applicant Tracking System qa VPC"
                ]
              }
            ],
            "id": "vpc-0ba2582a614948335",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dbb7350d3ed31f42",
            "owner_id": "668144156539",
            "tags": {
              "Name": "Applicant Tracking System qa VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ats_client_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:668144156539:loadbalancer/app/ats-client-alb/df6a6cfd7821c201",
            "arn_suffix": "app/ats-client-alb/df6a6cfd7821c201",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ats-client-alb-1918337271.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:668144156539:loadbalancer/app/ats-client-alb/df6a6cfd7821c201",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ats-client-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08f7030025a4c2ef8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02d9067dfd30c4f91"
              },
              {
                "subnet_id": "subnet-0b4dc59f2eff5fbde"
              },
              {
                "subnet_id": "subnet-0c636dcc21a7e9ec7"
              }
            ],
            "subnets": [
              "subnet-02d9067dfd30c4f91",
              "subnet-0b4dc59f2eff5fbde",
              "subnet-0c636dcc21a7e9ec7"
            ],
            "tags": {
              "Environment": "QA",
              "Name": "ATS Client ALB"
            },
            "tags_all": {
              "Environment": "QA",
              "Name": "ATS Client ALB"
            },
            "vpc_id": "vpc-0ba2582a614948335",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.ats_client_alb_sg",
            "data.aws_subnets.ats_public_subnets",
            "data.aws_vpc.target_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:668144156539:listener/app/ats-client-alb/df6a6cfd7821c201/2b0ab14590225719",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:668144156539:listener/app/ats-client-alb/df6a6cfd7821c201/2b0ab14590225719",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:668144156539:loadbalancer/app/ats-client-alb/df6a6cfd7821c201",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.ats_client_alb",
            "aws_security_group.ats_client_alb_sg",
            "data.aws_subnets.ats_public_subnets",
            "data.aws_vpc.target_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_alb_listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:668144156539:listener/app/ats-client-alb/df6a6cfd7821c201/ae906a9c2f2a0109",
            "certificate_arn": "arn:aws:acm:us-west-2:668144156539:certificate/05f66117-5b91-4e8a-b535-d798c8ebb4fd",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:668144156539:targetgroup/ats-client-alb-tg/f738af6e4d1cf1a1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:668144156539:listener/app/ats-client-alb/df6a6cfd7821c201/ae906a9c2f2a0109",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:668144156539:loadbalancer/app/ats-client-alb/df6a6cfd7821c201",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.app_cert",
            "aws_acm_certificate_validation.cert",
            "aws_alb.ats_client_alb",
            "aws_lb_target_group.ats_client_alb_tg",
            "aws_route53_record.cert_validation",
            "aws_security_group.ats_client_alb_sg",
            "data.aws_route53_zone.primary",
            "data.aws_subnets.ats_public_subnets",
            "data.aws_vpc.target_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ats_client_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:668144156539:targetgroup/ats-client-alb-tg/f738af6e4d1cf1a1",
            "arn_suffix": "targetgroup/ats-client-alb-tg/f738af6e4d1cf1a1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:668144156539:targetgroup/ats-client-alb-tg/f738af6e4d1cf1a1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ats-client-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "dependencies": [
            "data.aws_vpc.target_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ats_client_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:security-group/sg-08f7030025a4c2ef8",
            "description": "Security group for load balancer to allow HTTP traffic from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f7030025a4c2ef8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ATS Client ALB Security Group",
            "name_prefix": "",
            "owner_id": "668144156539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "QA",
              "Name": "ATS Client ALB Security Group"
            },
            "tags_all": {
              "Environment": "QA",
              "Name": "ATS Client ALB Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.target_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ats_client_task_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:security-group/sg-0125bd6af621473d7",
            "description": "Allow traffic to ATS Client tasks from ALB and allow outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0125bd6af621473d7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f7030025a4c2ef8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ats-client-task-sg-qa",
            "name_prefix": "",
            "owner_id": "668144156539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "QA",
              "Name": "ATS Client Task SG QA"
            },
            "tags_all": {
              "Environment": "QA",
              "Name": "ATS Client Task SG QA"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ats_client_alb_sg",
            "data.aws_vpc.target_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:security-group/sg-0ed1dbe81e8e1dd5e",
            "description": "Allow traffic from within VPC to VPC Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed1dbe81e8e1dd5e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from ECS tasks",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0125bd6af621473d7"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoint-sg-qa",
            "name_prefix": "",
            "owner_id": "668144156539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "QA",
              "Name": "VPC Endpoint SG"
            },
            "tags_all": {
              "Environment": "QA",
              "Name": "VPC Endpoint SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ats_client_alb_sg",
            "aws_security_group.ats_client_task_sg",
            "data.aws_vpc.target_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:vpc-endpoint/vpce-0cfa7434b03076ed0",
            "dns_entry": [
              {
                "dns_name": "vpce-0cfa7434b03076ed0-lv83e19k.api.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0cfa7434b03076ed0-lv83e19k-us-west-2a.api.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0cfa7434b03076ed0-lv83e19k-us-west-2c.api.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0cfa7434b03076ed0-lv83e19k-us-west-2b.api.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "api.ecr.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z0871998329L87QQO6EQJ"
              },
              {
                "dns_name": "ecr.us-west-2.api.aws",
                "hosted_zone_id": "Z095735724IWGXZCOXAZR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cfa7434b03076ed0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-078f7ae1c819c42fd",
              "eni-0797690a22bc516f3",
              "eni-0bb3f1dae80e9dca2"
            ],
            "owner_id": "668144156539",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ed1dbe81e8e1dd5e"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.19",
                "subnet_id": "subnet-02efb9ae526416ec0"
              },
              {
                "ipv4": "10.0.3.101",
                "subnet_id": "subnet-0f734e8126a8e8d35"
              },
              {
                "ipv4": "10.0.4.33",
                "subnet_id": "subnet-018ac018178982be4"
              }
            ],
            "subnet_ids": [
              "subnet-018ac018178982be4",
              "subnet-02efb9ae526416ec0",
              "subnet-0f734e8126a8e8d35"
            ],
            "tags": {
              "Environment": "QA",
              "Name": "ECR API Endpoint"
            },
            "tags_all": {
              "Environment": "QA",
              "Name": "ECR API Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "dependencies": [
            "aws_security_group.ats_client_alb_sg",
            "aws_security_group.ats_client_task_sg",
            "aws_security_group.vpc_endpoint_sg",
            "data.aws_subnets.ats_private_subnets",
            "data.aws_vpc.target_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:vpc-endpoint/vpce-0edabad253cfbdfb6",
            "dns_entry": [
              {
                "dns_name": "vpce-0edabad253cfbdfb6-hwoci1o8.dkr.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0edabad253cfbdfb6-hwoci1o8-us-west-2c.dkr.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0edabad253cfbdfb6-hwoci1o8-us-west-2b.dkr.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0edabad253cfbdfb6-hwoci1o8-us-west-2a.dkr.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "dkr.ecr.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z08709821PEOHZH1PCZRP"
              },
              {
                "dns_name": "*.dkr.ecr.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z08709821PEOHZH1PCZRP"
              },
              {
                "dns_name": "dkr-ecr.us-west-2.on.aws",
                "hosted_zone_id": "Z09292582Y03C5DIZCRT4"
              },
              {
                "dns_name": "*.dkr-ecr.us-west-2.on.aws",
                "hosted_zone_id": "Z09292582Y03C5DIZCRT4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0edabad253cfbdfb6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00da4a7a1029ea2a1",
              "eni-0b10d8a3c989aa924",
              "eni-0d148655e80e27429"
            ],
            "owner_id": "668144156539",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ed1dbe81e8e1dd5e"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.132",
                "subnet_id": "subnet-02efb9ae526416ec0"
              },
              {
                "ipv4": "10.0.3.37",
                "subnet_id": "subnet-0f734e8126a8e8d35"
              },
              {
                "ipv4": "10.0.4.225",
                "subnet_id": "subnet-018ac018178982be4"
              }
            ],
            "subnet_ids": [
              "subnet-018ac018178982be4",
              "subnet-02efb9ae526416ec0",
              "subnet-0f734e8126a8e8d35"
            ],
            "tags": {
              "Environment": "QA",
              "Name": "ECR DKR Endpoint"
            },
            "tags_all": {
              "Environment": "QA",
              "Name": "ECR DKR Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "dependencies": [
            "aws_security_group.ats_client_alb_sg",
            "aws_security_group.ats_client_task_sg",
            "aws_security_group.vpc_endpoint_sg",
            "data.aws_subnets.ats_private_subnets",
            "data.aws_vpc.target_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:668144156539:vpc-endpoint/vpce-0131976d3cede004f",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-0131976d3cede004f",
            "owner_id": "668144156539",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-085cffacc9b5f74d0"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "S3 Gateway Endpoint QA"
            },
            "tags_all": {
              "Name": "S3 Gateway Endpoint QA"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ba2582a614948335"
          },
          "dependencies": [
            "data.aws_route_tables.ats_private_rts",
            "data.aws_vpc.target_vpc"
          ]
        }
      ]
    }
  ]
}